@@ -1,5 +1,6 @@
 Version 0.32 (???)
 ------------------
+* BREAKING CHANGE: Modify rounding conversions for the integral parameter types to match VBA convention. Affects UInt16, Int16, Int32, Int64 and Boolean.
 * Fix method registration to avoid generic methods (for F# standalone).
 * Improve method deregistration to leave functions with #NAME? (thanks to kh).
 * Add completion synchronization for multiple async functions in a formula.
@@ -35,7 +36,7 @@ Version 0.32 (???)
 * Fix handling of UnauthorizedAccessException in DllRegisterServer.
 * Fix ExcelCommand to always register as a macro
 * Fix ExcelRtd2010BugHelper to delay tracking server objects until ServerStart().
-* BREAKING CHANGE: Modify rounding conversions for the integral parameter types to match VBA convention. Affects UInt16, Int16, Int32, Int64 and Boolean.
+* Fix empty string clipboard copy crash in LogDisplay.
 
 Version 0.30 (12 December 2012)
 -------------------------------
